<resources>
    <string name="app_name">home_work_s3_e7</string>
    <string name="_54">54</string>
    <string name="_834">834</string>
    <string name="_162">162</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="jacob_west">Jacob West</string>
    <string name="txt_account">Digital goodies designer @pixsellz \nEverything is designed.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="following">Following</string>
    <string name="jacob_w">jacob_w</string>
</resources>