<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.my_account_fragment.MyAccountFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAccount"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AccountLogoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/jacob_w"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/toolbarAccount"
        app:layout_constraintEnd_toEndOf="@id/toolbarAccount"
        app:layout_constraintStart_toStartOf="@id/toolbarAccount"
        app:layout_constraintTop_toTopOf="@id/toolbarAccount" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/like_container_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@id/like_container_bottom"
        app:layout_constraintTop_toBottomOf="@id/toolbarAccount"
        tools:ignore="RtlSymmetry">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_marginTop="5dp"
            android:elevation="10dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/accountIv1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_account_1" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/acme"
            android:gravity="center|bottom"
            android:text="@string/_54"
            android:textColor="@color/black_home_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_1_1"
            app:layout_constraintEnd_toStartOf="@id/tv_2"
            app:layout_constraintStart_toEndOf="@id/cardView"
            app:layout_constraintTop_toTopOf="@id/cardView" />

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/acme"
            android:gravity="center|bottom"
            android:text="@string/_834"
            android:textColor="@color/black_home_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_2_2"
            app:layout_constraintEnd_toStartOf="@id/tv_3"
            app:layout_constraintStart_toEndOf="@id/tv_1"
            app:layout_constraintTop_toTopOf="@id/cardView" />

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/acme"
            android:gravity="center|bottom"
            android:text="@string/_162"
            android:textColor="@color/black_home_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_3_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_2"
            app:layout_constraintTop_toTopOf="@id/cardView" />

        <TextView
            android:id="@+id/tv_1_1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/posts"
            android:textColor="@color/black_home_text"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/cardView"
            app:layout_constraintEnd_toEndOf="@id/tv_1"
            app:layout_constraintStart_toStartOf="@id/tv_1"
            app:layout_constraintTop_toBottomOf="@id/tv_1" />

        <TextView
            android:id="@+id/tv_2_2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/followers"
            android:textColor="@color/black_home_text"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/cardView"
            app:layout_constraintEnd_toEndOf="@id/tv_2"
            app:layout_constraintStart_toStartOf="@id/tv_2"
            app:layout_constraintTop_toBottomOf="@id/tv_2" />

        <TextView
            android:id="@+id/tv_3_3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/following"
            android:textColor="@color/black_home_text"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/cardView"
            app:layout_constraintEnd_toEndOf="@id/tv_3"
            app:layout_constraintStart_toStartOf="@id/tv_3"
            app:layout_constraintTop_toBottomOf="@id/tv_3" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/acme"
            android:text="@string/jacob_west"
            android:textColor="@color/black_home_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/txt_account"
            android:textColor="@color/black_home_text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tvName"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/acme"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:textColor="@color/black_home_text"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/tvText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/like_container_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/like_container_top">

        <View
            android:id="@+id/lineMine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutLike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lineMine" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/containerLikeBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayoutLike" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>